--- a/forum/pom.xml
+++ b/forum/pom.xml
@@ -11,9 +11,10 @@
 	</parent>
 	<groupId>br.com.alura</groupId>
 	<artifactId>forum</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>v0.0.1</version>
 	<name>forum</name>
 	<description>Forum da Alura</description>
+	<!--<packaging>war</packaging> &lt;!&ndash; Deploy para .war &ndash;&gt;-->
 
 	<properties>
 		<java.version>1.8</java.version>
@@ -49,6 +50,13 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
+
+		<!--<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-tomcat</artifactId>
+			<scope>provided</scope>
+			&lt;!&ndash; Deploy para .war &ndash;&gt;
+		</dependency>-->
 
 		<dependency>
 			<groupId>io.springfox</groupId>
