--- a/store/pom.xml
+++ b/store/pom.xml
@@ -15,7 +15,9 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.0</version>
                 <configuration>
+                    <source>11</source>
                     <release>11</release>
+                    <target>11</target>
                 </configuration>
             </plugin>
         </plugins>
@@ -34,10 +36,5 @@
             <version>1.4.200</version>
         </dependency>
     </dependencies>
-
-    <properties>
-        <maven.compiler.source>8</maven.compiler.source>
-        <maven.compiler.target>8</maven.compiler.target>
-    </properties>
 
 </project>
