--- a/servlets/curso 1/manager/WebContent/WEB-INF/web.xml
+++ b/servlets/curso 1/manager/WebContent/WEB-INF/web.xml
@@ -1,7 +1,41 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd" id="WebApp_ID" version="4.0">
-  <display-name>gerenciador</display-name>
-  <welcome-file-list>
-    <welcome-file>bem-vindo.html</welcome-file>
-  </welcome-file-list>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xmlns="http://xmlns.jcp.org/xml/ns/javaee"
+	xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
+	id="WebApp_ID" version="4.0">
+	<display-name>gerenciador</display-name>
+	<welcome-file-list>
+		<welcome-file>bem-vindo.html</welcome-file>
+	</welcome-file-list>
+
+	<filter>
+		<filter-name>MonitoringFilter</filter-name>
+		<filter-class>br.com.alura.gerenciador.servlet.MonitoringFilter</filter-class>
+	</filter>
+
+	<filter-mapping>
+		<filter-name>MonitoringFilter</filter-name>
+		<url-pattern>/entry</url-pattern>
+	</filter-mapping>
+
+	<filter>
+		<filter-name>AuthorizationFilter</filter-name>
+		<filter-class>br.com.alura.gerenciador.servlet.AuthorizationFilter</filter-class>
+	</filter>
+
+	<filter-mapping>
+		<filter-name>AuthorizationFilter</filter-name>
+		<url-pattern>/entry</url-pattern>
+	</filter-mapping>
+
+	<filter>
+		<filter-name>ControllerFilter</filter-name>
+		<filter-class>br.com.alura.gerenciador.servlet.ControllerFilter</filter-class>
+	</filter>
+
+	<filter-mapping>
+		<filter-name>ControllerFilter</filter-name>
+		<url-pattern>/entry</url-pattern>
+	</filter-mapping>
+
 </web-app>
