--- a/maven/store/pom.xml
+++ b/maven/store/pom.xml
@@ -1,19 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>br.com.alura</groupId>
 	<artifactId>store</artifactId>
 	<version>v1.0-beta</version>
 	<name>store</name>
-
+	<!--As dependências ficam baixadas no diretório ~/.m2 na máquina-->
 	<dependencies>
+		<!--Regular Dependencies-->
+		<dependency>
+			<groupId>com.thoughtworks.xstream</groupId>
+			<artifactId>xstream</artifactId>
+			<version>1.4.14</version>
+		</dependency>
+		<!--Test Dependencies-->
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.13.2</version>
+			<version>4.12</version>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
-
+	<repositories>
+		<repository>
+			<id>spring-repo</id>
+			<url>https://repo.string.io/release</url>
+		</repository>
+	</repositories>
 </project>
