--- a/maven/store/pom.xml
+++ b/maven/store/pom.xml
@@ -7,6 +7,17 @@
 	<version>v1.0-beta</version>
 	<name>store</name>
 	<!--As dependências ficam baixadas no diretório ~/.m2 na máquina-->
+	<build>
+		<plugins>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>11</source>
+					<target>11</target>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 	<dependencies>
 		<!--Regular Dependencies-->
 		<dependency>
